Fixed superform div and responsive tweakpane panel on mobile

--- a/Projects/Interactive-Tools/Super-Formula-Sub-Divider/style.css
+++ b/Projects/Interactive-Tools/Super-Formula-Sub-Divider/style.css
@@ -3,9 +3,10 @@
   padding: 0;
 }
 
-.tp-dfwv {
-  /* left: 1em; */
-  padding-top: 1em;
-  overflow: visible;
-  /* display: none; */
+@media (max-width: 600px) {
+  .my-pane {
+    scale: calc(70%);
+    margin-right: -3em;
+    margin-top: -5em;
+  }
 }
